# baby-phi

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Input.md  LEARNINGS.md  README.md  config.toml  deny.toml  docker-compose.yml  identity.md  journal.md  last_run_log.md
modules/crates/cli/: Cargo.toml
modules/crates/cli/fixtures/reference_layouts/: mid-product-team.yaml  minimal-startup.yaml  regulated-enterprise.yaml
modules/crates/cli/src/: exit.rs  main.rs  session_store.rs
modules/crates/cli/src/commands/: agent.rs  bootstrap.rs  completion.rs  login.rs  mcp_server.rs  mod.rs  model_provider.rs  org.rs  platform_defaults.rs  project.rs  secrets.rs  session.rs  system_agent.rs  template.rs
modules/crates/cli/tests/: bootstrap_cli.rs  completion_help.rs  mcp_server_help.rs  model_provider_help.rs  org_help.rs  platform_defaults_help.rs  secrets_help.rs
modules/crates/domain/: Cargo.toml
modules/crates/domain/src/: audit.rs  in_memory.rs  lib.rs  model.rs  permissions.rs  repository.rs  session_recorder.rs  state_machines.rs
modules/crates/domain/src/audit/: mod.rs
modules/crates/domain/src/audit/events/: mod.rs
modules/crates/domain/src/auth_requests/: mod.rs  retention.rs  revocation.rs  state.rs  transitions.rs
modules/crates/domain/src/events/: bus.rs  listeners.rs  mod.rs
modules/crates/domain/src/model/: composites.rs  composites_m2.rs  composites_m3.rs  composites_m4.rs  composites_m5.rs  edges.rs  fundamentals.rs  ids.rs  mod.rs  nodes.rs  principal_resource.rs
modules/crates/domain/src/permissions/: catalogue.rs  decision.rs  engine.rs  expansion.rs  manifest.rs  metrics.rs  mod.rs  selector.rs
modules/crates/domain/src/templates/: a.rs  adoption.rs  b.rs  c.rs  d.rs  e.rs  mod.rs
modules/crates/domain/tests/: audit_hash_chain_props.rs  auth_request_aggregation_props.rs  auth_request_retention_props.rs  auth_request_revocation_props.rs  auth_request_transition_props.rs  edge_type_safety.rs  in_memory_m2_test.rs  in_memory_m3_test.rs  in_memory_m4_test.rs  in_memory_m5_test.rs  instance_uri_grant_match_props.rs  m2_model_counts.rs  m3_model_counts.rs  m5_wrap_roundtrip.rs  mcp_cascade_props.proptest-regressions  mcp_cascade_props.rs  permission_check_catalogue_props.rs  permission_check_consent_props.rs  permission_check_constraint_props.rs  permission_check_match_props.rs  permission_check_monotonicity_props.rs  permission_check_worked_trace.rs  platform_defaults_non_retroactive_props.rs  shape_b_approval_matrix_props.rs  step_4_constraint_value_match_props.rs  template_a_firing_props.rs  template_a_props.rs  template_b_props.rs  template_c_firing_props.rs  template_c_props.rs  template_d_firing_props.rs  template_d_props.rs  template_e_props.rs  two_orgs_audit_chain_props.rs
modules/crates/domain/tests/common/: mod.rs
modules/crates/domain/tests/edge_type_safety/compile_fail/: allocated_to_rejects_memory_as_principal.rs  allocated_to_rejects_memory_as_principal.stderr  created_rejects_grant_as_principal.rs  created_rejects_grant_as_principal.stderr  created_rejects_org_as_resource.rs  created_rejects_org_as_resource.stderr  owned_by_rejects_consent_as_principal.rs  owned_by_rejects_consent_as_principal.stderr  owned_by_rejects_node_id_as_principal.rs  owned_by_rejects_node_id_as_principal.stderr  owned_by_rejects_user_as_resource.rs  owned_by_rejects_user_as_resource.stderr
modules/crates/server/: Cargo.toml
modules/crates/server/src/: config.rs  health.rs  lib.rs  main.rs  router.rs  session.rs  shutdown.rs  state.rs  telemetry.rs
modules/crates/server/src/bootstrap/: claim.rs  credential.rs  init.rs  mod.rs
modules/crates/server/src/handler_support/: audit.rs  errors.rs  mod.rs  permission.rs  session.rs
modules/crates/server/src/handlers/: agents.rs  bootstrap.rs  mod.rs  orgs.rs  platform_defaults.rs  platform_mcp_servers.rs  platform_model_providers.rs  platform_secrets.rs  projects.rs  sessions.rs  system_agents.rs  templates.rs
modules/crates/server/src/platform/: mod.rs
modules/crates/server/src/platform/agents/: create.rs  execution_limits.rs  list.rs  mod.rs  update.rs
modules/crates/server/src/platform/defaults/: get.rs  mod.rs  put.rs
modules/crates/server/src/platform/mcp_servers/: archive.rs  health_probe.rs  list.rs  mod.rs  patch_tenants.rs  register.rs
modules/crates/server/src/platform/model_providers/: archive.rs  list.rs  mod.rs  provider_kinds.rs  register.rs
modules/crates/server/tests/: acceptance_agents_list.rs  acceptance_agents_profile.rs  acceptance_authority_templates.rs  acceptance_bootstrap.rs  acceptance_m2.rs  acceptance_m3.rs  acceptance_m4.rs  acceptance_mcp_servers.rs  acceptance_metrics.rs  acceptance_model_providers.rs  acceptance_orgs_create.rs  acceptance_orgs_dashboard.rs  acceptance_platform_defaults.rs  acceptance_projects_create.rs  acceptance_projects_detail.rs  acceptance_secrets.rs  acceptance_sessions_m5p4.rs  acceptance_shutdown.rs  acceptance_system_agents.rs  bootstrap_handler_test.rs  handler_support_test.rs  health_test.rs  permission_check_mapping_test.rs  session_cookie_test.rs  spawn_claimed_smoke.rs  spawn_claimed_with_org_smoke.rs  spawn_claimed_with_project_smoke.rs  tls_test.rs
modules/crates/server/tests/acceptance_common/: admin.rs  mod.rs
modules/crates/store/: Cargo.toml
modules/crates/store/migrations/: 0001_initial.surql  0002_platform_setup.surql  0003_org_creation.surql  0004_agents_projects.surql  0005_sessions_templates_system_agents.surql  0006_agent_profile_mock_response.surql
modules/crates/store/src/: audit_emitter.rs  crypto.rs  lib.rs  migrations.rs  repo_impl.rs  repo_impl_m2.rs
modules/crates/store/tests/: apply_agent_creation_tx_test.rs  apply_org_creation_tx_test.rs  apply_project_creation_tx_test.rs  audit_emitter_chain_test.rs  crypto_vault_test.rs  migrations_0002_test.rs  migrations_0004_test.rs  migrations_0005_test.rs  migrations_test.rs  repo_m2_surface_test.rs  repo_m3_surface_test.rs  repo_m4_surface_test.rs  repo_m5_surface_test.rs  repository_test.rs  vault_roundtrip_props.rs
src/: main.rs  (+1 more)
(+477 files in other folders)
