[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for the phi agent management platform."

[[bin]]
name = "phi"
path = "src/main.rs"

[dependencies]
phi-core = { workspace = true }
domain   = { workspace = true }
server   = { workspace = true }
tokio    = { workspace = true }
clap     = { workspace = true }
clap_complete = "4"
reqwest  = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2", "charset"] }
serde    = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml     = { workspace = true }
anyhow   = { workspace = true }
thiserror = { workspace = true }
tracing  = { workspace = true }
chrono   = { workspace = true }
base64   = { workspace = true }
uuid     = { workspace = true }

[dev-dependencies]
tempfile = "3"
domain  = { workspace = true, features = ["in-memory-repo"] }
server  = { workspace = true }
store   = { workspace = true }
axum    = { workspace = true }
tokio   = { workspace = true }
