[package]
name = "domain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Graph model, Permission Check engine, Auth Request state machine, and system-flow state machines for baby-phi."

[dependencies]
phi-core = { workspace = true }

serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
async-trait = { workspace = true }
futures     = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio    = { workspace = true }
