[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP API for baby-phi (axum)."

[lib]
path = "src/lib.rs"

[[bin]]
name = "baby-phi-server"
path = "src/main.rs"

[dependencies]
domain   = { workspace = true }
store    = { workspace = true }
phi-core = { workspace = true }

axum        = { workspace = true }
axum-server = { workspace = true }
tokio       = { workspace = true }
tower       = { workspace = true }
tower-http  = { workspace = true }
hyper       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
axum-prometheus    = { workspace = true }
config      = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
domain      = { workspace = true }
tokio       = { workspace = true }
tower       = { workspace = true }
axum        = { workspace = true }
axum-server = { workspace = true }
async-trait = { workspace = true }
reqwest     = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rcgen       = "0.13"
rustls      = { version = "0.23", default-features = false, features = ["ring"] }
tempfile    = "3"
