[package]
name = "store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SurrealDB-backed repository implementation for baby-phi."

[dependencies]
domain = { workspace = true }

surrealdb   = { workspace = true }
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
async-trait = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
